// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddPalette snapshots and initial state should match the initial snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <AddPalette
    activePalette={Array []}
    projects={Array []}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div>
          <h3>
            Save Palette to Project
          </h3>
        </div>,
        <form>
          <input
            autoComplete="off"
            name="paletteName"
            onChange={[Function]}
            placeholder="palette name"
            value=""
          />
          <button
            onClick={[Function]}
          >
            Save to...
          </button>
          <select
            name="projectID"
            onChange={[Function]}
          >
            <option
              hidden={true}
            >
               Select a Project 
            </option>
          </select>
        </form>,
        <h5>
          
        </h5>,
      ],
      "className": "add-palette",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <h3>
            Save Palette to Project
          </h3>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Save Palette to Project",
          },
          "ref": null,
          "rendered": "Save Palette to Project",
          "type": "h3",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <input
              autoComplete="off"
              name="paletteName"
              onChange={[Function]}
              placeholder="palette name"
              value=""
            />,
            <button
              onClick={[Function]}
            >
              Save to...
            </button>,
            <select
              name="projectID"
              onChange={[Function]}
            >
              <option
                hidden={true}
              >
                 Select a Project 
              </option>
            </select>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "autoComplete": "off",
              "name": "paletteName",
              "onChange": [Function],
              "placeholder": "palette name",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Save to...",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": "Save to...",
            "type": "button",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <option
                  hidden={true}
                >
                   Select a Project 
                </option>,
                Array [],
              ],
              "name": "projectID",
              "onChange": [Function],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": " Select a Project ",
                  "hidden": true,
                },
                "ref": null,
                "rendered": " Select a Project ",
                "type": "option",
              },
            ],
            "type": "select",
          },
        ],
        "type": "form",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "",
        },
        "ref": null,
        "rendered": "",
        "type": "h5",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div>
            <h3>
              Save Palette to Project
            </h3>
          </div>,
          <form>
            <input
              autoComplete="off"
              name="paletteName"
              onChange={[Function]}
              placeholder="palette name"
              value=""
            />
            <button
              onClick={[Function]}
            >
              Save to...
            </button>
            <select
              name="projectID"
              onChange={[Function]}
            >
              <option
                hidden={true}
              >
                 Select a Project 
              </option>
            </select>
          </form>,
          <h5>
            
          </h5>,
        ],
        "className": "add-palette",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <h3>
              Save Palette to Project
            </h3>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Save Palette to Project",
            },
            "ref": null,
            "rendered": "Save Palette to Project",
            "type": "h3",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <input
                autoComplete="off"
                name="paletteName"
                onChange={[Function]}
                placeholder="palette name"
                value=""
              />,
              <button
                onClick={[Function]}
              >
                Save to...
              </button>,
              <select
                name="projectID"
                onChange={[Function]}
              >
                <option
                  hidden={true}
                >
                   Select a Project 
                </option>
              </select>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "autoComplete": "off",
                "name": "paletteName",
                "onChange": [Function],
                "placeholder": "palette name",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": "input",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Save to...",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "Save to...",
              "type": "button",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <option
                    hidden={true}
                  >
                     Select a Project 
                  </option>,
                  Array [],
                ],
                "name": "projectID",
                "onChange": [Function],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": " Select a Project ",
                    "hidden": true,
                  },
                  "ref": null,
                  "rendered": " Select a Project ",
                  "type": "option",
                },
              ],
              "type": "select",
            },
          ],
          "type": "form",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "",
          },
          "ref": null,
          "rendered": "",
          "type": "h5",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`AddPalette snapshots and initial state should match the snapshot with projects and activePalette 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <AddPalette
    activePalette={
      Array [
        "111111",
        "222222",
        "333333",
        "444444",
        "555555",
      ]
    }
    projects={
      Array [
        Object {
          "id": 1,
          "project_name": "first",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div>
          <h3>
            Save Palette to Project
          </h3>
        </div>,
        <form>
          <input
            autoComplete="off"
            name="paletteName"
            onChange={[Function]}
            placeholder="palette name"
            value=""
          />
          <button
            onClick={[Function]}
          >
            Save to...
          </button>
          <select
            name="projectID"
            onChange={[Function]}
          >
            <option
              hidden={true}
            >
               Select a Project 
            </option>
            <option
              value={1}
            >
              first
            </option>
          </select>
        </form>,
        <h5>
          
        </h5>,
      ],
      "className": "add-palette",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <h3>
            Save Palette to Project
          </h3>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Save Palette to Project",
          },
          "ref": null,
          "rendered": "Save Palette to Project",
          "type": "h3",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <input
              autoComplete="off"
              name="paletteName"
              onChange={[Function]}
              placeholder="palette name"
              value=""
            />,
            <button
              onClick={[Function]}
            >
              Save to...
            </button>,
            <select
              name="projectID"
              onChange={[Function]}
            >
              <option
                hidden={true}
              >
                 Select a Project 
              </option>
              <option
                value={1}
              >
                first
              </option>
            </select>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "autoComplete": "off",
              "name": "paletteName",
              "onChange": [Function],
              "placeholder": "palette name",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Save to...",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": "Save to...",
            "type": "button",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <option
                  hidden={true}
                >
                   Select a Project 
                </option>,
                Array [
                  <option
                    value={1}
                  >
                    first
                  </option>,
                ],
              ],
              "name": "projectID",
              "onChange": [Function],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": " Select a Project ",
                  "hidden": true,
                },
                "ref": null,
                "rendered": " Select a Project ",
                "type": "option",
              },
              Object {
                "instance": null,
                "key": "1",
                "nodeType": "host",
                "props": Object {
                  "children": "first",
                  "value": 1,
                },
                "ref": null,
                "rendered": "first",
                "type": "option",
              },
            ],
            "type": "select",
          },
        ],
        "type": "form",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "",
        },
        "ref": null,
        "rendered": "",
        "type": "h5",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div>
            <h3>
              Save Palette to Project
            </h3>
          </div>,
          <form>
            <input
              autoComplete="off"
              name="paletteName"
              onChange={[Function]}
              placeholder="palette name"
              value=""
            />
            <button
              onClick={[Function]}
            >
              Save to...
            </button>
            <select
              name="projectID"
              onChange={[Function]}
            >
              <option
                hidden={true}
              >
                 Select a Project 
              </option>
              <option
                value={1}
              >
                first
              </option>
            </select>
          </form>,
          <h5>
            
          </h5>,
        ],
        "className": "add-palette",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <h3>
              Save Palette to Project
            </h3>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Save Palette to Project",
            },
            "ref": null,
            "rendered": "Save Palette to Project",
            "type": "h3",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <input
                autoComplete="off"
                name="paletteName"
                onChange={[Function]}
                placeholder="palette name"
                value=""
              />,
              <button
                onClick={[Function]}
              >
                Save to...
              </button>,
              <select
                name="projectID"
                onChange={[Function]}
              >
                <option
                  hidden={true}
                >
                   Select a Project 
                </option>
                <option
                  value={1}
                >
                  first
                </option>
              </select>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "autoComplete": "off",
                "name": "paletteName",
                "onChange": [Function],
                "placeholder": "palette name",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": "input",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Save to...",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "Save to...",
              "type": "button",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <option
                    hidden={true}
                  >
                     Select a Project 
                  </option>,
                  Array [
                    <option
                      value={1}
                    >
                      first
                    </option>,
                  ],
                ],
                "name": "projectID",
                "onChange": [Function],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": " Select a Project ",
                    "hidden": true,
                  },
                  "ref": null,
                  "rendered": " Select a Project ",
                  "type": "option",
                },
                Object {
                  "instance": null,
                  "key": "1",
                  "nodeType": "host",
                  "props": Object {
                    "children": "first",
                    "value": 1,
                  },
                  "ref": null,
                  "rendered": "first",
                  "type": "option",
                },
              ],
              "type": "select",
            },
          ],
          "type": "form",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "",
          },
          "ref": null,
          "rendered": "",
          "type": "h5",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;
